14.feb (ws)
      - update italian instrument file from César Penagos
      - fixed crash when creating excerpts from staff > 1 and with slurs
      - added separate text styles for even/odd lyrics lines
      - script debugger can now enabled/disabled with check button in Help menu
        instead via command line option. Command line option sets default.
13.feb (ws)
      - added test script notenames.js
      - more scripting code
      (db)
      - Added new instruments: Snare Drum, Bass Drum, Cymbal, Cowbell, Claves,
        Maracas, Tambourine (translation incomplete)
      (tb)
      - updated French translation by JLWaltener
12.feb (ws)
      - started some work on the scripting interface
      (db)
      - Added Timpani, Glockenspiel, Vibraphone, Marimba, Xylophone, and Tubular Bells
        to new instrument group called "Pitched Percussion" (translation incomplete)
      - Removed Tympani from the regular percussion group.
      - Changed menu item from Notes > Tuplets > Other Tuplets to Notes > Tuplets > Other...
11.feb (ws)
      - fixed possible crash when copy/paste lyrics
      - support for new *.mscx file extension
10.feb (tb)
      - updated Dutch translation by Jaap Plaisier
9.feb (ws)
      - fixed crash in note entry mode when measure was selected and a note
        was entered with mouse
      - better check result of save operation
      - fixed: temp file was not deleted on windows
      (db)
      - added Italian handbook, updated Spanish handbook
      - updated version number on splash screen
7.feb (tb)
      - updated French translation by JLWaltener
6.feb (ws)
      - moved functionality from text palette (F2) to a context toolbar "edit tools"
        and to "text properties" dialog
      ======== Version 0.9.4 released =============
6.feb (tb)
      - updated Dutch translation and instruments by Jaap Plaisier
5.feb (ws)
      - fixed crash when inserting new instrument
4.feb (tb)
      - updated French translation by JLWaltener